@@ -12,10 +12,8 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-
 #if !SILVERLIGHT
 // we do not support xml config on SL
-
 namespace Castle.Windsor.Tests.Configuration2
 {
 	using NUnit.Framework;
